# iNaturalist-Uploads

./: .gitignore  Pipfile  README.md  api_interactions.py  classes.py  config.py  custom_logging.py  exceptions.py  gpx.py  gpx_speed_test.py  gui.py  import_functions.py  import_gui.py  main.py  obs_processing.py  pyproject.toml  upload_folders.py  utility.py
reference/: Pipfile  main.py  upload_folder.py
testing/: hartwood both sides.gpx
testing/gpx/: Recording - Apr 17, 7_43 PM.gpx  Recording - Apr 27, 1_48 PM.gpx  Recording - Aug 03, 2_43 PM.gpx  Recording - Jul 04, 3_15 PM.gpx  Recording - Jul 06, 12_51 PM.gpx  Recording - Jul 06, 1_04 PM.gpx  Recording - Jul 15, 1_37 PM.gpx  Recording - Jul 17, 8_33 PM.gpx  Recording - Jul 22, 6_50 PM.gpx  Recording - Jul 23, 3_03 PM.gpx  Recording - Jul 24, 8_16 PM.gpx  Recording - Jul 27, 1_49 PM.gpx  Recording - Jun 16, 4_33 PM.gpx  Recording - May 25, 5_01 PM.gpx  hartwood blue.gpx  hartwood oct 6.gpx  north park kayak launch.gpx  np.gpx  sewickley musjroomwalk.gpx  sewickley post walk.gpx
tests/: test_gpx.py  test_obs_processing.py
